--- a/racetimer.html
+++ b/racetimer.html
@@ -7,6 +7,7 @@
 		<title>RaceTimer</title>
 		<!-- lib reading start -->
 		<link href="bootstrap.min.css" rel="stylesheet">
+		<link href="bootstrap.css" rel="stylesheet">
 		<script src="bootstrap.min.js"></script>
 		<script src="anime.min.js"></script>
 		<script src="jquery-3.3.1.min.js"></script>
@@ -15,48 +16,53 @@
 		<link rel="icon" href="icon.jpg">
 	</head>
 	<body style="background: #000;">
-		<aside class="text-center scriptalert">
-			<noscript>
-				<div class="container">
-        			<div class="alert alert-danger" role="alert">
-        				JavaScriptがオフになっているようです。JavaScriptをオンにしてください。
-        			</div>
-				</div>
-			</noscript>
-		</aside>
-		<section class="passsec text-center container">
-			<p>
-				<div id="showArea" class="showRaceTime" style="font-family: digitalfont;"></div>
-			</p>
-			<br>
-			<p>
-				<ul id="showLapArea" class="showLap" style="font-family: digitalfont;">
-				</ul>
-			</p>
+		<!--<aside class="text-center scriptalert">-->
+			<div class="container">
+				<noscript>
+					<div class="alert alert-danger alert-dismissible fade show" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="閉じる">
+							<span aria-hidden="true">&times;</span>
+						</button>
+	        			JavaScriptがオフになっているようです。<strong>JavaScriptをオンにしてください。</strong>
+	        		</div>
+				</noscript>
+			</div>
+		<!--</aside>-->
+		<section class="passsec text-center">
+			<div class="container">
+				<p>
+					<div id="showArea" class="showRaceTime" style="font-family: digitalfont;"></div>
+				</p>
+				<br>
+				<p>
+					<ul id="showLapArea" class="showLap" style="font-family: digitalfont;">
+					</ul>
+				</p>
+			</div>
 		</section>
 	</body>
 	<script>
 		//keydown code
-		document.onkeydown = keydown;
-		let flag = 0; //flag 0 -> not running, 1 -> running
-		function keydown(){
-			if(event.key == "Enter" && flag == 0){
+		var status = 0; //status 0 -> not running, 1 -> running
+		document.onkeydown = function keydown(){
+			if(event.key == "Enter" && status == 0){
 				start();
 			}
-			else if(event.key == "Enter" && flag == 1){
+			else if(event.key == "Enter" && status == 1){
 				stop();
 			}
 			else if(event.keyCode == 32){
 				reset();
 			}
-			else if(event.key == "l" && flag == 1){
+			else if(event.key == "l" && status == 1){
 				lap();
 			}
-			else if(event.key == "r" && flag == 1){
+			else if(event.key == "r" && status == 1){
 				lapreset();
 			}
 		}
 		//keydown end
+
 		//addzero code
 		function addzero(num){
 			if(num < 10){
@@ -67,6 +73,7 @@
 			}
 		}
 		//addzero end
+		
 		//passsec code
 		var passSec,passMsec,passMin,lapnum;
 		
@@ -98,13 +105,13 @@
 		function start(){
 			timer = setInterval('showSec()',10);
 			
-			flag = 1;
+			status = 1;
 		}
 		
 		function stop(){
 			clearInterval(timer);
 			
-			flag = 0;
+			status = 0;
 		}
 		
 		function reset(){
@@ -120,7 +127,7 @@
 			document.getElementById("showArea").innerHTML = defaultmsg;
 			document.getElementById("showLapArea").innerHTML = "";
 			
-			flag = 0;
+			status = 0;
 		}
 
 		function lap(){
